--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@ionic-native/status-bar": "^4.10.1",
     "@ionic-native/themeable-browser": "^4.10.1",
     "@ionic/pro": "2.0.2",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "browser": "^0.2.6",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
-    "cordova-ios": "4.5.4",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic": "^5.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
