--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "~4.10.0",
+    "@ionic-native/geolocation": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/sqlite": "^4.10.1",
     "@ionic-native/status-bar": "^4.10.1",
@@ -34,6 +35,7 @@
     "cordova-ios": "^4.5.5",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic": "^5.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.0.2",
@@ -64,7 +66,10 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-themeablebrowser": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "Obtener la geolocalización de los estabecimeintos"
+      }
     },
     "platforms": [
       "ios",
