--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@ionic/pro": "2.0.2",
     "@ionic/storage": "^2.1.3",
     "browser": "^0.2.6",
-    "cordova-android": "7.0.0",
+    "cordova-android": "^5.1.1",
     "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "^4.0.3",
